ensure min max labels remain top most
this avoids a subtle but where the pointer can overlap the text slightly

--- a/src/speedometer.scss
+++ b/src/speedometer.scss
@@ -112,6 +112,7 @@ $widget-bg: #2a2a2a;
     align-self: stretch;
     margin-top: 5px;
     font-size: 40px;
+    position: relative;
 
     div {
       flex: 0 0 100px;
